<resources>
    <string name="app_name">JoySerial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Joy Serial</string>
    <string name="nav_header_subtitle">USB to Serial Data Sender</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pause">Pause</string>
    <string name="Y">Y</string>
    <string name="X">X</string>
    <string name="B">B</string>
    <string name="A">A</string>
    <string name="UP">UP</string>
    <string name="LEFT">LEFT</string>
    <string name="RIGHT">RIGHT</string>
    <string name="DOWN">DOWN</string>
    <string name="menu_gamepad">Gamepad</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_snippet">Snippet</string>
    <string name="arm_control">Arm Control</string>
    <string name="gamepad">GamePad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terminal">Terminal</string>
    <string name="start_terminal">Start Terminal</string>
</resources>